--- a/redirect_after_login.info.yml
+++ b/redirect_after_login.info.yml
@@ -4,6 +4,6 @@ package: Login Redirection
 type: module
 version: 1.0
 core: 8.x
-configure: redirect_after_login
+configure: redirect_after_login.admin_settings
 
   
